# DocsAI

./: README.md
docsai-backend/: .gitignore  docker-compose.yml  pyproject.toml
docsai-backend/app/: main.py
docsai-backend/app/core/: auth_middleware.py  clients.py  database.py  security.py
docsai-backend/app/models/: document.py  user.py
docsai-backend/app/routes/: auth.py  generation.py  ingestion.py  user.py
docsai-backend/app/services/chat/: graph.py  model.py  nodes.py  prompts.py
docsai-backend/app/services/ingestion/: graph.py  model.py  nodes.py  prompts.py
docsai_frontend/: package.json  pnpm-lock.yaml
docsai_frontend/src/: proxy.ts
docsai_frontend/src/app/: globals.css  layout.tsx  page.tsx
docsai_frontend/src/app/(auth)/login/: page.tsx
docsai_frontend/src/app/(auth)/register/: page.tsx
docsai_frontend/src/app/(protected)/chat/: page.tsx
docsai_frontend/src/components/chat/: ChatWindow.tsx  MessageBubble.tsx  Sidebar.tsx  UploadPanel.tsx
docsai_frontend/src/components/landing/: FeaturesSection.tsx  FooterSection.tsx  HeroSection.tsx  Navbar.tsx
docsai_frontend/src/components/ui/: toaster.tsx
docsai_frontend/src/hooks/: use-toast.ts
docsai_frontend/src/lib/: api.ts
docsai_frontend/src/store/: authStore.ts  chatStore.ts
