[project]
name = "docsai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "bcrypt==4.0.1",
    "cloudinary>=1.44.2",
    "cohere>=5.21.1",
    "fastapi>=0.136.1",
    "fastembed>=0.8.0",
    "langchain>=1.3.0",
    "langchain-cohere>=0.5.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.4.0",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.2.1",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.0",
    "langgraph-checkpoint-postgres>=3.1.0",
    "passlib[bcrypt]>=1.7.4",
    "pdfplumber>=0.11.9",
    "psycopg2-binary>=2.9.12",
    "psycopg[async,binary]>=3.3.4",
    "pydantic[email]>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.28",
    "qdrant-client>=1.18.0",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.46.0",
]
